openshift/dev-only/vllm-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vllm-networkpolicy
  namespace: vllm
spec:
  podSelector:
    matchLabels:
      serving.kserve.io/inferenceservice: llm-ov
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: monitoring
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-kube-apiserver
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: vllm-optimizer-dev
      podSelector:
        matchLabels:
          app: vllm-optimizer-backend
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-lightspeed
    ports:
    - protocol: TCP
      port: 8000
    - protocol: TCP
      port: 8080
